# html2rich

./: LICENSE  README.md  example.py  pyproject.toml  test.html
html2rich/: __init__.py  __main__.py  colors.py  document.py  node.py  parse_margins.py  resolvers.py  utils.py
html2rich/css_parser/: default_stylesheet.py  parse_file.py  rule.py  rule_manager.py  selector.py  utils.py  value.py
